--- a/Assignment19/Assignment19.vcxproj
+++ b/Assignment19/Assignment19.vcxproj
@@ -160,7 +160,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>P:\SDKs\graphics\tinyobjloader;P:\SDKs\graphics\tinygltf;P:\SDKs\graphics\stb;P:\SDKs\graphics\glm;P:\SDKs\graphics\glfw\glfw-3.3.6.bin.WIN64\include;P:\SDKs\VulkanSDK\1.3.204.1\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <Optimization>Disabled</Optimization>
+      <Optimization>MaxSpeed</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
