--- a/Assignment11/Assignment11.vcxproj.filters
+++ b/Assignment11/Assignment11.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Resource Files\shaders">
+      <UniqueIdentifier>{d2231e0d-f6d6-45b2-be02-80674169d0a9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Assignment11.cpp">
@@ -20,14 +23,14 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\Shader.frag">
+    <None Include="compile_shaders.bat">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="shaders\Shader.vert">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\shaders</Filter>
     </None>
-    <None Include="compile_shaders.bat">
-      <Filter>Resource Files</Filter>
+    <None Include="shaders\Shader.frag">
+      <Filter>Resource Files\shaders</Filter>
     </None>
   </ItemGroup>
 </Project>
