--- a/Assignment17/Assignment17.vcxproj.filters
+++ b/Assignment17/Assignment17.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Resource Files\shaders">
+      <UniqueIdentifier>{b70c5a0d-de15-4aea-a24b-d125e65e4c94}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Assignment17.cpp">
@@ -23,11 +26,11 @@
     <None Include="compile_shaders.bat">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="shaders\BRDFShader.frag">
-      <Filter>Resource Files</Filter>
-    </None>
     <None Include="shaders\BRDFShader.vert">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\shaders</Filter>
+    </None>
+    <None Include="shaders\BRDFShader.frag">
+      <Filter>Resource Files\shaders</Filter>
     </None>
   </ItemGroup>
 </Project>
