--- a/Assignment19/Assignment19.vcxproj.filters
+++ b/Assignment19/Assignment19.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Resource Files\textures">
+      <UniqueIdentifier>{fedb6507-dce7-4a29-9741-d0958d92eec5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Assignment19.cpp">
@@ -24,7 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="textures\TextureCG2022.png">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\textures</Filter>
     </Image>
   </ItemGroup>
 </Project>
